feat(AG-027): implement new client questions methods and fixed old
